--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,6 +20,9 @@
     <style name="Toolbar">
         <item name="android:background">@color/black</item>
     </style>
+    <style name="hind1">
+        <item name="android:background">@color/gray</item>
+    </style>
     <style name="collectionBox">
         <item name="android:background">#222222</item>
     </style>
