--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,6 +10,6 @@
     <color name="darkmodedfont">#E1E1E1</color>
     <color name="darkmode">#000000</color>
     <color name="Mint">#FF03DAC5</color>
-    <color name="gray">#E3E3E3</color>
+    <color name="gray">#000000</color>
     <color name="Darkgray">#454545</color>
 </resources>
