white all button

--- a/app/src/main/res/layout/activity_companycolletion.xml
+++ b/app/src/main/res/layout/activity_companycolletion.xml
@@ -51,7 +51,7 @@
             android:padding="10dp"
             android:text="@string/job_seeker"
             android:textAlignment="textStart"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:checked="true"
             />
 
@@ -66,11 +66,10 @@
             android:padding="10dp"
             android:text="Recruiter"
             android:textAlignment="textStart"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
     </RadioGroup>
 
     <Button
-
         android:id="@+id/btnsignIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,6 +77,7 @@
         android:gravity="center"
         android:text="@string/next"
         android:textSize="18sp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
