--- a/app/src/main/res/layout/activity_jobseekercolletion.xml
+++ b/app/src/main/res/layout/activity_jobseekercolletion.xml
@@ -278,6 +278,7 @@
             android:gravity="center"
             android:text="@string/next"
             android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
