--- a/app/src/main/res/layout/activity_jobseekercolletion2.xml
+++ b/app/src/main/res/layout/activity_jobseekercolletion2.xml
@@ -179,13 +179,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginStart="50dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/round_bg"
             android:gravity="center"
             android:text="@string/next"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
