--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -62,6 +62,7 @@
         android:background="@drawable/round_bg"
         android:gravity="center"
         android:text="@string/sign_up"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
