--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,7 +14,7 @@
         <item name="android:windowTranslucentStatus">true</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/darkmodedfont</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">15sp</item>
         <item name="backgroundColor">@color/black</item>
     </style>
     <style name="Toolbar">
