--- a/app/src/main/res/layout/activity_jobseekercolletion2.xml
+++ b/app/src/main/res/layout/activity_jobseekercolletion2.xml
@@ -36,10 +36,9 @@
             <EditText
                 android:id="@+id/txtSkill"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
                 android:gravity="top"
                 android:inputType="textMultiLine"
-                android:lines="5"
                 android:overScrollMode="always"
                 android:scrollbarStyle="insideInset"
                 android:scrollbars="vertical"
@@ -105,9 +104,8 @@
             <EditText
                 android:id="@+id/txtcer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
                 android:inputType="textMultiLine"
-                android:lines="5"
                 android:gravity="top"
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
@@ -133,9 +131,8 @@
             <EditText
                 android:id="@+id/txtinterest"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
                 android:inputType="textMultiLine"
-                android:lines="5"
                 android:gravity="top"
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
@@ -161,9 +158,8 @@
             <EditText
                 android:id="@+id/txtworkExperian"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
                 android:inputType="textMultiLine"
-                android:lines="5"
                 android:gravity="top"
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
