--- a/app/src/main/res/layout/activity_job_create.xml
+++ b/app/src/main/res/layout/activity_job_create.xml
@@ -295,16 +295,49 @@
             app:layout_constraintTop_toBottomOf="@+id/txtgender"
             android:layout_marginTop="10dp"/>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/view4"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:hint="Work address*"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/line2">
+
+            <EditText
+                android:id="@+id/txtaddress"
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:gravity="top"
+                android:inputType="textMultiLine"
+                android:overScrollMode="always"
+                android:scrollbarStyle="insideInset"
+                android:scrollbars="vertical"
+                android:scrollHorizontally="false" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <View
+            android:id="@+id/line4"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@color/darkmodedfont"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view4"
+            android:layout_marginTop="10dp"/>
         <TextView
             android:id="@+id/jobdescription"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/job_description"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"
-            android:textStyle="bold"
             android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@+id/line2" />
+            android:textStyle="bold"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/line4" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/view1"
@@ -336,8 +369,7 @@
             android:layout_height="match_parent"
             android:text="@string/candidate_requirements"
             android:textSize="20sp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"
+            android:layout_margin="8dp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/view1" />
 
@@ -371,8 +403,7 @@
             android:layout_height="match_parent"
             android:text="@string/benefit"
             android:textSize="20sp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"
+            android:layout_margin="8dp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/view2" />
 
