--- a/app/src/main/res/layout/activity_companycolletion.xml
+++ b/app/src/main/res/layout/activity_companycolletion.xml
@@ -26,6 +26,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/img"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -51,6 +52,7 @@
             android:id="@+id/txtcompanyName"
             android:layout_width="300dp"
             android:layout_height="50dp"
+            android:maxLength="30"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
