--- a/app/src/main/res/layout/activity_job_create.xml
+++ b/app/src/main/res/layout/activity_job_create.xml
@@ -35,6 +35,7 @@
         <EditText
             android:id="@+id/jobPosition"
             android:layout_width="280dp"
+            android:maxLength="30"
             android:layout_height="50dp"
             android:layout_marginEnd="50dp"
             android:layout_marginTop="10dp"
@@ -100,6 +101,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:singleLine="true"
+            android:maxLength="20"
             android:hint="@string/Salary"
             android:imeOptions="actionNext"
             android:textColor="@color/darkmodedfont"
@@ -139,6 +141,7 @@
             android:layout_marginTop="10dp"
             android:singleLine="true"
             android:inputType="number"
+            android:maxLength="2"
             android:hint="Need*"
             android:textColor="@color/darkmodedfont"
             app:layout_constraintStart_toEndOf="@+id/imgNumOfrecut"
@@ -177,6 +180,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="5dp"
             android:hint="@string/Level"
+            android:maxLength="20"
             android:imeOptions="actionNext"
             android:singleLine="true"
             app:layout_constraintStart_toEndOf="@id/addressic"
@@ -216,6 +220,7 @@
             android:layout_marginTop="5dp"
             android:inputType="number"
             android:layout_height="48dp"
+            android:maxLength="1"
             android:imeOptions="actionNext"
             android:textColor="@color/darkmodedfont"
             app:layout_constraintStart_toEndOf="@id/imgexp"
@@ -309,8 +314,9 @@
             <EditText
                 android:id="@+id/txtaddress"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="wrap_content"
                 android:gravity="top"
+                android:maxLength="250"
                 android:inputType="textMultiLine"
                 android:overScrollMode="always"
                 android:scrollbarStyle="insideInset"
@@ -353,8 +359,9 @@
             <EditText
                 android:id="@+id/txtjobdescription"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="wrap_content"
                 android:gravity="top"
+
                 android:inputType="textMultiLine"
                 android:overScrollMode="always"
                 android:scrollbarStyle="insideInset"
@@ -387,7 +394,7 @@
             <EditText
                 android:id="@+id/txtRequirements"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="wrap_content"
                 android:gravity="top"
                 android:inputType="textMultiLine"
                 android:overScrollMode="always"
@@ -421,7 +428,7 @@
             <EditText
                 android:id="@+id/txtbenefit"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="wrap_content"
                 android:gravity="top"
                 android:inputType="textMultiLine"
                 android:overScrollMode="always"
