--- a/app/src/main/res/layout/activity_jobseekercolletion.xml
+++ b/app/src/main/res/layout/activity_jobseekercolletion.xml
@@ -22,10 +22,11 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="330dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:src="@drawable/img"
+            android:layout_height="370dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/img"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -34,12 +35,12 @@
         <EditText
             android:id="@+id/txteIntroduce"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:gravity="left"
             android:hint="@string/introduce_you_self"
             android:inputType="textMultiLine"
+            android:maxLength="250"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -66,6 +67,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
+            android:maxLength="30"
             android:gravity="center_vertical"
             android:hint="@string/name"
             android:singleLine="true"
@@ -90,6 +92,7 @@
             android:layout_marginEnd="20dp"
             android:gravity="center_vertical"
             android:hint="GPA*"
+            android:maxLength="1"
             android:inputType="numberDecimal"
             android:layout_marginTop="10dp"
             android:singleLine="true"
@@ -102,6 +105,7 @@
             android:id="@+id/university"
             android:layout_width="240dp"
             android:layout_height="50dp"
+            android:maxLength="30"
             android:gravity="center_vertical"
             android:hint="@string/university"
             android:layout_marginStart="9dp"
@@ -124,6 +128,7 @@
             app:layout_constraintTop_toBottomOf="@+id/workid"/>
 
         <EditText
+            android:maxLength="30"
             android:singleLine="true"
             android:id="@+id/positionId"
             android:layout_width="300dp"
@@ -147,6 +152,7 @@
             app:layout_constraintTop_toBottomOf="@+id/personid" />
 
         <AutoCompleteTextView
+            android:maxLength="50"
             android:id="@+id/txtaddress"
             android:layout_width="300dp"
             android:layout_marginTop="10dp"
@@ -180,6 +186,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:hint="Email*"
+            android:maxLength="30"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/emailic"
             app:layout_constraintTop_toBottomOf="@+id/txtaddress"/>
@@ -202,6 +209,7 @@
             android:gravity="center_vertical"
             android:hint="@string/phone_number"
             android:phoneNumber="true"
+            android:maxLength="10"
             android:layout_marginTop="10dp"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -259,7 +267,7 @@
             android:layout_height="50dp"
             android:layout_marginEnd="20dp"
             android:hint="@string/website"
-
+            android:maxLength="50"
             android:singleLine="true"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
