--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,6 +31,8 @@
         android:id="@+id/txtemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
         android:layout_marginTop="15dp"
         android:hint="Email"
         android:textSize="20sp"
@@ -49,6 +51,8 @@
         android:layout_marginTop="4dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         android:hint="Password"
         android:inputType="textPassword"
         android:textSize="20sp"
