--- a/app/src/main/res/layout/activity_job_create.xml
+++ b/app/src/main/res/layout/activity_job_create.xml
@@ -17,9 +17,47 @@
             android:id="@+id/toolbarid"
             layout="@layout/toolbar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/location"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:hint="@string/Joblocation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbarid">
+
+
+            <AutoCompleteTextView
+                android:id="@+id/txtlocation"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="8dp"
+                android:singleLine="true"
+                android:padding="10dp"
+                android:gravity="center_vertical"
+                android:focusable="false"
+                android:inputType="none"
+                android:maxLength="30"
+                app:layout_constraintTop_toBottomOf="@+id/toolbarid" />
+        </com.google.android.material.textfield.TextInputLayout>
+        <Spinner
+            android:id="@+id/my_spinner3"
+            style="@style/fontJD"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/information"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/location" />
 
         <TextView
             android:id="@+id/information"
@@ -30,7 +68,7 @@
             android:layout_marginTop="5dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/toolbarid" />
+            app:layout_constraintTop_toBottomOf="@+id/location" />
 
         <EditText
             android:id="@+id/jobPosition"
