--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -44,7 +44,7 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:text="Cong ty A"
                 android:textColor="@color/darkmodedfont"
                 android:textSize="20dp"
@@ -371,15 +371,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="gone"/>
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <FrameLayout
                 android:id="@+id/right_overlay"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@color/Mint"
-                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
